mypy_output.txt
tsercom/data/remote_data_organizer.py:399: error: "DataTypeT" has no attribute
"data"  [attr-defined]
                    interpolated_item.data = interpolated_inner_data  # Us...
                    ^~~~~~~~~~~~~~~~~~~~~~
Found 1 error in 1 file (checked 149 source files)
